--- a/source/template/pages/top.hbs
+++ b/source/template/pages/top.hbs
@@ -12,12 +12,12 @@ side: false
 					<div class="block__item">
 						<div class="article fz-16">
 							<div class="article__header">
-								<div class="article__thumb">
+								<a href="#" class="article__thumb d-b">
 									<img src="{{{pic}}}/640/350">
-								</div>
+								</a>
 							</div>
 							<div class="article__body">
-								<p class="article__body__title">{{title}}</p>
+								<a href="#" class="article__body__title d-b">{{title}}</a>
 								<!-- <p class="article__body__data">{{{date_time}}}</p> -->
 								<!-- <p class="article__body__action">
 									<i class="icon-wf" data-icon-bf="&#xE600"></i>
@@ -35,12 +35,12 @@ side: false
 					<div class="block__item">
 						<div class="article">
 							<div class="article__header">
-								<div class="article__thumb">
+								<a href="#" class="article__thumb d-b">
 									<img src="{{{pic}}}/307/210">
-								</div>
+								</a>
 							</div>
 							<div class="article__body">
-								<p class="article__body__title">{{title}}</p>
+								<a href="#" class="article__body__title d-b">{{title}}</a>
 								<!-- <p class="article__body__data">{{{date_time}}}</p> -->
 								<!-- <p class="article__body__action">
 									<i class="icon-wf" data-icon-bf="&#xE600"></i>
