--- a/source/sass/core/_base.scss
+++ b/source/sass/core/_base.scss
@@ -30,7 +30,12 @@ h1 {
 	padding: 0;
 }
 a {
+	color: #fff;
 	text-decoration: none;
+	@include transition(color 0.3s ease-in-out);
+	&:hover {
+		color: hsla(217, 95%, 47%, 1);
+	}
 }
 input, textarea {
 	border: none;
