--- a/source/template/partials/meta.hbs
+++ b/source/template/partials/meta.hbs
@@ -1,6 +1,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>{{{title}}}</title>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.min.js"></script>
 	<script src="http://code.angularjs.org/1.2.3/angular-animate.min.js"></script>
 	<script type="text/javascript" src="/static/js/app.js"></script>
