likeボタンとか

--- a/source/sass/core/_base.scss
+++ b/source/sass/core/_base.scss
@@ -8,7 +8,7 @@ html {
 body {
 	font-size: 1.6rem;
 	color: #fff;
-	font-family: 'Raleway', sans-serif;
+	// font-family: 'Raleway', sans-serif;
 	word-wrap: break-word;
 	background: image-url("polygon_bg5.png") repeat;
 	background-attachment: fixed;
