--- a/source/sass/module/_article.scss
+++ b/source/sass/module/_article.scss
@@ -1,5 +1,5 @@
 .article {
-
+	padding-bottom: 20px;
 }
 .article__header {
 
@@ -7,5 +7,5 @@
 .article__thumb {
 }
 .article__body__title {
-	margin: 1em 0;
+	margin: 1em 0 0.5em;
 }
