--- a/source/template/pages/top.hbs
+++ b/source/template/pages/top.hbs
@@ -19,9 +19,14 @@ side: false
 							<div class="article__body">
 								<a href="#" class="article__body__title d-b">{{title}}</a>
 								<!-- <p class="article__body__data">{{{date_time}}}</p> -->
-								<!-- <p class="article__body__action">
-									<i class="icon-wf" data-icon-bf="&#xE600"></i>
-								</p> -->
+								<p class="article__body__action">
+									<a href="#" class="c-like mgr-10 icon-wf" data-icon-bf="&#xE607">
+										<span class="c-like__count">67</span>
+									</a>
+									<a href="#" class="c-favorite icon-wf" data-icon-bf="&#xE604">
+										<span class="c-favorite__count">163</span>
+									</a>
+								</p>
 							</div>
 						</div>
 					</div>
@@ -30,10 +35,10 @@ side: false
 			</div>
 			<div class="u-recently-Post">
 				<h2 class="heading heading--a">RecentlyPost</h2>
-				<div class="block block--4 block--margin">
+				<div class="block block--4 block--margin fz-30">
 					{{#each post_item10}}
 					<div class="block__item">
-						<div class="article">
+						<div class="article fz-16">
 							<div class="article__header">
 								<a href="#" class="article__thumb d-b">
 									<img src="{{{pic}}}/307/210">
@@ -41,10 +46,14 @@ side: false
 							</div>
 							<div class="article__body">
 								<a href="#" class="article__body__title d-b">{{title}}</a>
-								<!-- <p class="article__body__data">{{{date_time}}}</p> -->
-								<!-- <p class="article__body__action">
-									<i class="icon-wf" data-icon-bf="&#xE600"></i>
-								</p> -->
+								<p class="article__body__action">
+									<a href="#" class="c-like mgr-10 icon-wf" data-icon-bf="&#xE607">
+										<span class="c-like__count">67</span>
+									</a>
+									<a href="#" class="c-favorite icon-wf" data-icon-bf="&#xE604">
+										<span class="c-favorite__count">163</span>
+									</a>
+								</p>
 							</div>
 						</div>
 					</div>
