--- a/source/sass/core/_base.scss
+++ b/source/sass/core/_base.scss
@@ -10,7 +10,7 @@ body {
 	color: #fff;
 	// font-family: 'Raleway', sans-serif;
 	word-wrap: break-word;
-	background: image-url("polygon_bg5.png") repeat;
+	background: image-url("polygon_bg.png") repeat;
 	background-attachment: fixed;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
