--- a/source/template/partials/_globalHeader.hbs
+++ b/source/template/partials/_globalHeader.hbs
@@ -5,10 +5,10 @@
 				<div class="box-header__logo d-tbc va-m">
 					<p class="fc-wt fw-b fz-20">Logo</p>
 				</div>
-				<div class="box-header__login d-tbc va-m ta-c w-200">
-					<a href="#" class="fc-wt">Login</a>
+				<div class="box-header__login d-tbc va-m ta-c w-200" ng-controller="logIn">
+					<a href="#" class="fc-wt" ng-click="login">Login</a>
 					<span class="fc-wt pdl-4 pdr-4">/</span>
-					<a href="#" class="btn btn--signup btn--medium">Signup</a>
+					<a href="#" class="btn btn--signup btn--medium" ng-click="signup()">Signup</a>
 				</div>
 			</div>
 		</div>
@@ -34,3 +34,14 @@
 		<!-- <div class="box-global-navi__sub box-global-navi__sub--tags" ng-init="isTagsOpen = false" ng-show="isTagsOpen"></div> -->
 	</div>
 </div>
+<script type="text/ng-template" id="myModalContent">
+	<div class="modal-header">
+		<h3 class="modal-title">Im a modal!</h3>
+	</div>
+	<div class="modal-body">
+	</div>
+	<div class="modal-footer">
+		<button class="btn btn-primary" ng-click="ok()">OK</button>
+		<button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+	</div>
+</script>
