--- a/source/template/partials/meta.hbs
+++ b/source/template/partials/meta.hbs
@@ -2,9 +2,11 @@
 	<meta charset="UTF-8">
 	<title>{{{title}}}</title>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.18/angular.min.js"></script>
 	<script src="http://code.angularjs.org/1.2.3/angular-animate.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.min.js"></script>
 	<script type="text/javascript" src="/static/js/app.js"></script>
-	<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:100,300,400|Raleway:400,200,100' rel='stylesheet' type='text/css'>
+	<!-- <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:100,300,400|Raleway:400,200,100' rel='stylesheet' type='text/css'> -->
+	<!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.0/css/bootstrap.min.css"></link> -->
 	<link rel='stylesheet' href='/static/css/all.css' />
 </head>
