--- a/source/template/pages/top.hbs
+++ b/source/template/pages/top.hbs
@@ -10,25 +10,7 @@ side: false
 				<div class="block block--3 block--margin fz-30">
 					{{#each post_item3}}
 					<div class="block__item">
-						<div class="article fz-16">
-							<div class="article__header">
-								<a href="#" class="article__thumb d-b">
-									<img src="{{{pic}}}/640/350">
-								</a>
-							</div>
-							<div class="article__body">
-								<a href="#" class="article__body__title d-b">{{title}}</a>
-								<!-- <p class="article__body__data">{{{date_time}}}</p> -->
-								<p class="article__body__action">
-									<a href="#" class="c-like mgr-10 icon-wf" data-icon-bf="&#xE607">
-										<span class="c-like__count">67</span>
-									</a>
-									<a href="#" class="c-favorite icon-wf" data-icon-bf="&#xE604">
-										<span class="c-favorite__count">163</span>
-									</a>
-								</p>
-							</div>
-						</div>
+					{{> _article}}
 					</div>
 					{{/each}}
 				</div>
@@ -38,24 +20,7 @@ side: false
 				<div class="block block--4 block--margin fz-30">
 					{{#each post_item10}}
 					<div class="block__item">
-						<div class="article fz-16">
-							<div class="article__header">
-								<a href="#" class="article__thumb d-b">
-									<img src="{{{pic}}}/307/210">
-								</a>
-							</div>
-							<div class="article__body">
-								<a href="#" class="article__body__title d-b">{{title}}</a>
-								<p class="article__body__action">
-									<a href="#" class="c-like mgr-10 icon-wf" data-icon-bf="&#xE607">
-										<span class="c-like__count">67</span>
-									</a>
-									<a href="#" class="c-favorite icon-wf" data-icon-bf="&#xE604">
-										<span class="c-favorite__count">163</span>
-									</a>
-								</p>
-							</div>
-						</div>
+						{{> _article}}
 					</div>
 					{{/each}}
 				</div>
