なんかいろいろした

--- a/source/sass/core/_helper.scss
+++ b/source/sass/core/_helper.scss
@@ -314,6 +314,9 @@
 /*----------------------------------------
   size
 ----------------------------------------*/
+.w-120 {
+	width: 120px;
+}
 .w-200 {
 	width: 200px;
 }
