--- a/source/sass/module/_button.scss
+++ b/source/sass/module/_button.scss
@@ -4,33 +4,108 @@
 //
 // Styleguide 2
 
-// Skins
+// Default Skins
 //
 // Buttons can and should be clicked.
 //
-// Markup: <button class="btn btn--medium {$modifiers}">
+// Markup: <a href="#" class="btn btn--medium {$modifiers}">button</a>
 //
-// .btn--signup - Highlight the button when hovered.
+// .btn--a - Highlight the button when hovered.
+// .btn--b - Highlight the button when hovered.
+// .btn--c - Highlight the button when hovered.
+// .btn--d - Highlight the button when hovered.
 //
 // Styleguide 2.1
 
-.btn {
+// Border Skins
+//
+// Buttons can and should be clicked.
+//
+// Markup: <a href="#" class="btn btn--medium btn--border {$modifiers}">button</a>
+//
+// .btn--a - Highlight the button when hovered.
+// .btn--b - Highlight the button when hovered.
+// .btn--c - Highlight the button when hovered.
+// .btn--d - Highlight the button when hovered.
+//
+// Styleguide 2.2
 
+.btn {
+	border-radius: 2px;
+	@include box-sizing(border-box);
 }
-.btn--signup {
+
+.btn--transition {
+	@include transition(color 0.3s ease-in-out, background-color 0.3s ease-in-out);
+}
+
+.btn--a {
 	display: inline-block;
 	color: #fff;
-	border: 1px solid #fff;
-	border-radius: 2px;
-	opacity: .8;
-	@include transition(color 0.3s ease-in-out, background-color 0.3s ease-in-out);
-	&:hover {
-		color: #222;
-		background-color: #fff;
+	border: 1px solid #0c73e4;
+	background-color: #0c73e4;
+	&.btn--border {
+		color: #0c73e4;
+		border: 1px solid #0c73e4;
+		background-color: transparent;
+		&:hover {
+			color: #fff;
+			background-color: #0c73e4;
+		}
 	}
 }
+
+.btn--b {
+	display: inline-block;
+	color: #fff;
+	border: 1px solid #84858f;
+	background-color: #84858f;
+	&.btn--border {
+		color: #84858f;
+		border: 1px solid #84858f;
+		background-color: transparent;
+		&:hover {
+			color: #fff;
+			background-color: #84858f;
+		}
+	}
+}
+
+.btn--c {
+	display: inline-block;
+	color: #222;
+	border: 1px solid #fff;
+	background-color: #fff;
+	opacity: .8;
+	&.btn--border {
+		color: #fff;
+		border: 1px solid #fff;
+		background-color: transparent;
+		&:hover {
+			color: #222;
+			background-color: #fff;
+		}
+	}
+}
+
+.btn--d {
+	display: inline-block;
+	color: #fff;
+	border: 1px solid #F02073;
+	background-color: #F02073;
+	&.btn--border {
+		color: #F02073;
+		border: 1px solid #F02073;
+		background-color: transparent;
+		&:hover {
+			color: #fff;
+			background-color: #F02073;
+		}
+	}
+}
+
 .btn--medium {
-	height: 36px;
-	line-height: 36px;
+	height: 38px;
+	line-height: 38px;
 	padding: 0 1em;
 }
