--- a/source/template/pages/top.hbs
+++ b/source/template/pages/top.hbs
@@ -7,7 +7,7 @@ side: false
 		<div class="l-main">
 			<div class="u-pickup">
 				<h2 class="heading heading--a">Pickup</h2>
-				<div class="block block--3 block--margin fz-30">
+				<div class="block block--3 block--margin block--respond fz-30">
 					{{#each post_item3}}
 					<div class="block__item">
 					{{> _article}}
@@ -17,7 +17,7 @@ side: false
 			</div>
 			<div class="u-recently-Post">
 				<h2 class="heading heading--a">RecentlyPost</h2>
-				<div class="block block--4 block--margin fz-30">
+				<div class="block block--4 block--margin block--respond fz-30">
 					{{#each post_item10}}
 					<div class="block__item">
 						{{> _article}}
