--- a/source/template/partials/_globalHeader.hbs
+++ b/source/template/partials/_globalHeader.hbs
@@ -8,7 +8,7 @@
 				<div class="box-header__login d-tbc va-m ta-c w-200" ng-controller="logIn">
 					<a href="#" class="" ng-click="login">Login</a>
 					<span class="fc-wt pdl-4 pdr-4">/</span>
-					<a href="#" class="btn btn--signup btn--medium" ng-click="signup()">Signup</a>
+					<a href="#" class="btn btn--c btn--border btn--medium btn--transition" ng-click="signup()">Signup</a>
 				</div>
 			</div>
 		</div>
@@ -33,7 +33,7 @@
 					<div class="d-ib ta-c w-200" ng-show="isSticky" ng-controller="logIn">
 						<a href="#" class="" ng-click="login">Login</a>
 						<span class="fc-wt pdl-4 pdr-4">/</span>
-						<a href="#" class="btn btn--signup btn--medium" ng-click="signup()">Signup</a>
+						<a href="#" class="btn btn--c btn--border btn--medium btn--transition" ng-click="signup()">Signup</a>
 					</div>
 				</div>
 			</div>
@@ -54,8 +54,8 @@
 	</div>
 	<div class="modal-body">
 	</div>
-	<div class="modal-footer">
-		<button class="btn btn-primary" ng-click="ok()">OK</button>
-		<button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+	<div class="modal-footer ta-c">
+		<a href="#" class="btn btn--a btn--medium btn--transition w-120" ng-click="ok()">OK</a>
+		<a href="#" class="btn btn--b btn--medium btn--transition w-120 mgl-20" ng-click="cancel()">Cancel</a>
 	</div>
 </script>
