--- a/source/sass/core/_grid.scss
+++ b/source/sass/core/_grid.scss
@@ -2,6 +2,7 @@ $start : 1;
 $end   : 10;
 $grid  : 1 / $end;
 .grid {
+	width: 100%;
 	float: left;
 	@include box-sizing(border-box);
 	@for $i from $start through $end {
