--- a/source/sass/module/_block.scss
+++ b/source/sass/module/_block.scss
@@ -32,8 +32,60 @@
 
 // タブレット以上PC以下
 @media screen and (max-width: 960px) {
+	.block {
+		&.block--respond {
+			@for $i from 4 through 6 {
+				&.block--#{$i} {
+					.block__item {
+						width: percentage(1 / 3);
+						&:nth-child(3n+1) {
+							clear: both;
+						}
+					}
+				}
+			}
+			@for $i from 7 through 10 {
+				&.block--#{$i} {
+					.block__item {
+						width: percentage(1 / 4);
+						&:nth-child(4n+1) {
+							clear: both;
+						}
+					}
+				}
+			}
+		}
+	}
 }
 
 // タブレット以下
 @media screen and (max-width: 768px) {
+	.block {
+		&.block--respond {
+			@for $i from 2 through 4 {
+				&.block--#{$i} {
+					.block__item {
+						width: percentage(1 / 1);
+							clear: both;
+					}
+				}
+			}
+			@for $i from 5 through 10 {
+				&.block--#{$i} {
+					.block__item {
+						width: percentage(1 / 2);
+						&:nth-child(2n+1) {
+							clear: both;
+						}
+					}
+				}
+			}
+		}
+		&.block--margin {
+			margin: -0.25em;
+			.block__item {
+				padding: 0.25em;
+			}
+		}
+	}
 }
