--- a/source/template/pages/top.hbs
+++ b/source/template/pages/top.hbs
@@ -3,7 +3,7 @@ title: top
 layout: default.hbs
 side: false
 ---
-	<div class="grid">
+	<div class="grid grid--10">
 		<div class="l-main">
 			<div class="u-pickup">
 				<h2 class="heading heading--a">Pickup</h2>
