--- a/source/sass/module/_button.scss
+++ b/source/sass/module/_button.scss
@@ -14,6 +14,7 @@
 // .btn--b - Highlight the button when hovered.
 // .btn--c - Highlight the button when hovered.
 // .btn--d - Highlight the button when hovered.
+// .btn--e - Highlight the button when hovered.
 //
 // Styleguide 2.1
 
@@ -27,6 +28,7 @@
 // .btn--b - Highlight the button when hovered.
 // .btn--c - Highlight the button when hovered.
 // .btn--d - Highlight the button when hovered.
+// .btn--e - Highlight the button when hovered.
 //
 // Styleguide 2.2
 
@@ -36,7 +38,22 @@
 }
 
 .btn--transition {
-	@include transition(color 0.3s ease-in-out, background-color 0.3s ease-in-out);
+	position: relative;
+	overflow: hidden;
+	@include transition(color 0.3s ease-in-out, border 0.3s ease-in-out, background-color 0.3s ease-in-out);
+	&:active::before {
+		content: "";
+		position: absolute;
+		top: -32px; /* (button height - height) / 2 */
+		left: calc(50% - 50px);
+		width: 100px;
+		height: 100px;
+		border-radius: 100%;
+		-webkit-animation: scaleout 0.3s 1 ease-out;
+		animation: scaleout 0.3s 1 ease-out;
+
+		opacity: 0;
+	}
 }
 
 .btn--a {
@@ -53,8 +70,12 @@
 			background-color: #0c73e4;
 		}
 	}
+	&:active {
+		&::before {
+			background-color: #3B50CE;
+		}
+	}
 }
-
 .btn--b {
 	display: inline-block;
 	color: #fff;
@@ -70,7 +91,6 @@
 		}
 	}
 }
-
 .btn--c {
 	display: inline-block;
 	color: #222;
@@ -87,20 +107,44 @@
 		}
 	}
 }
-
 .btn--d {
 	display: inline-block;
 	color: #fff;
-	border: 1px solid #F02073;
-	background-color: #F02073;
+	border: 1px solid #f02073;
+	background-color: #f02073;
 	&.btn--border {
-		color: #F02073;
-		border: 1px solid #F02073;
+		color: #f02073;
+		border: 1px solid #f02073;
 		background-color: transparent;
 		&:hover {
 			color: #fff;
-			background-color: #F02073;
+			background-color: #f02073;
 		}
+	}
+}
+.btn--e {
+	display: inline-block;
+	color: #fff;
+	border: 1px solid #2b2438;
+	background-color: #2b2438;
+	&.btn--border {
+		color: #2b2438;
+		border: 1px solid #2b2438;
+		background-color: transparent;
+		&:hover {
+			color: #fff;
+			background-color: #2b2438;
+		}
+	}
+}
+.btn--f {
+	display: inline-block;
+	color: #fff;
+	border: 1px solid hsla(0, 0%, 100%, 0);
+	&:hover {
+		color: #fff;
+		border: 1px solid hsla(0, 0%, 100%, 0.3);
+		background-color: hsla(0, 0%, 100%, 0.3);
 	}
 }
 
